--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Python
+# Python generated files
 __pycache__/
 *.py[cod]
 *$py.class
@@ -19,14 +19,58 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
-.env
-.venv
-env/
+
+# Virtual environments
 venv/
+env/
 ENV/
-env.bak/
-venv.bak/
+.env
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Project specific directories
+uploads/
+processed_videos/
+metadata/
+thumbnails/
+temp/
+state/
+
+# Generated files
+*.mp4
+*.avi
+*.mov
+*.mkv
+*.webm
+*.wmv
+*.flv
+*.m4v
+*.3gp
+*.json
+!requirements.json
+!package.json
+!tsconfig.json
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Database
+*.sqlite
+*.sqlite3
+*.db
+
+# OS specific files
+.DS_Store
+Thumbs.db
 
 # Node
 node_modules/
@@ -40,7 +84,6 @@ yarn-error.log*
 .env.production.local
 
 # IDEs and editors
-.idea/
 .project
 .classpath
 .c9/
@@ -52,14 +95,11 @@ yarn-error.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-*.swp
-*.swo
 .DS_Store
 Thumbs.db
 
 # Project specific
 backend/storage/
-backend/uploads/
 *.mp4
 *.avi
 *.mov
@@ -68,13 +108,6 @@ backend/uploads/
 *.mkv
 *.webm
 *.m4v
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Testing
 .coverage
@@ -113,7 +146,6 @@ wheels/
 .ipynb_checkpoints
 
 # Local development settings
-.env
 .env.local
 .env.development.local
 .env.test.local
@@ -126,12 +158,10 @@ wheels/
 *~
 
 # System Files
-.DS_Store
-.DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db 
+Thumbs.db
 project_context.md
 taskbreakdown.md
