--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,4 +9,5 @@ python-dotenv==1.0.1
 opencv-python==4.9.0.80
 pytest==8.0.0
 httpx==0.26.0
-pytest-asyncio==0.23.5 
+pytest-asyncio==0.23.5
+ffmpeg-python==0.2.0 
