--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Python generated files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
@@ -19,98 +19,8 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-
-# Virtual environments
-venv/
-env/
-ENV/
-.env
-
-# IDE files
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-
-# Project specific directories
-uploads/
-processed_videos/
-metadata/
-thumbnails/
-temp/
-state/
-Task4_COMPLETED.md/
-
-# Generated files
-*.mp4
-*.avi
-*.mov
-*.mkv
-*.webm
-*.wmv
-*.flv
-*.m4v
-*.3gp
-*.json
-!requirements.json
-!package.json
-!tsconfig.json
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Database
-*.sqlite
-*.sqlite3
-*.db
-
-# OS specific files
-.DS_Store
-Thumbs.db
-
-# Node
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDEs and editors
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.DS_Store
-Thumbs.db
-
-# Project specific
-backend/storage/
-*.mp4
-*.avi
-*.mov
-*.wmv
-*.flv
-*.mkv
-*.webm
-*.m4v
-
-# Testing
+MANIFEST
+.pytest_cache/
 .coverage
 htmlcov/
 .tox/
@@ -122,47 +32,103 @@ coverage.xml
 *.cover
 *.py,cover
 .hypothesis/
-.pytest_cache/
 cover/
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
+# Virtual environments
+venv/
+env/
+ENV/
+.env/
+.venv/
+env.bak/
+venv.bak/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# Local development settings
+dist-ssr/
+*.local
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Temporary files
-*.tmp
-*.temp
+# IDEs and editors
+.idea/
+.vscode/
 *.swp
+*.swo
 *~
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
-# System Files
+# OS specific files
+.DS_Store
+.DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
 ehthumbs.db
 Thumbs.db
-project_context.md
-taskbreakdown.md
+
+# Project specific directories
+backend/uploads/
+backend/processed_videos/
+backend/metadata/
+backend/thumbnails/
+backend/temp/
+backend/state/
+processing_states.json
+
+# Media files (don't commit these large binary files)
+*.mp4
+*.avi
+*.mov
+*.mkv
+*.webm
+*.wmv
+*.flv
+*.m4v
+*.3gp
+*.ogg
+*.wav
+*.mp3
+*.aac
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+
+# Allow these files to be committed
+!requirements.txt
+!package.json
+!package-lock.json
+!tsconfig.json
+!tsconfig.app.json
+!tsconfig.node.json
+!vite.config.ts
+!eslint.config.js
+
+# Project documentation (uncomment if you don't want to include these)
+# project_context.md
+# taskbreakdown.md
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Log files
+logs/
+*.log 
